Теперь рендер вынесен в фабрики